Run spell-checker

--- a/abstract.tex
+++ b/abstract.tex
@@ -10,7 +10,7 @@
     weekly survey of the shore of a small lake over two years using an
     autonomous surface vessel. This dataset is used first in a place
     recognition task framed as a classification problem, then in a pose
-    regression task and finally the internal features learnt by the
+    regression task and finally the internal features learned by the
     network are evaluated for their representation power. 
 
     All our results are based on the Caffe library and default network
