--- a/experimental.tex
+++ b/experimental.tex
@@ -5,7 +5,7 @@ Since then, every 8 to 15 days, we operate an autonomous surface vessel
 (Kingfisher from Clearpath Robotics, see fig.~\ref{fig:kingfisher}) around a small lake next to our campus.
 This lake is 400m long by 200m wide, with a small island and a total perimeter
 of 1km. Its shores are covered with trees, from small bushes to tall full-grown
-trees, some at the water line, others further away, grass areas are interweaved
+trees, some at the water line, others further away, grass areas are mixed
 with the shrubberies and a small scenic trail runs around the lake. Some of the
 places (as in fig.~\ref{fig:dataset-hard}) have office buildings in the
 background. 
@@ -19,7 +19,7 @@ background.
 \end{figure}
 
 Every survey we collect contains images acquired by a pan-tilt surveillance
-camera ($704\times480$ pixels) at 10Hz with a slight jpeg compression. The boat
+camera ($704\times480$ pixels) at 10Hz with a slight JPEG compression. The boat
 runs autonomously at a constant distance of 10m to the shore (lattice-type
 local planner) and at a bit less than 1km/h. This means that a survey is a
 collection of close to 40'000 images, acquired with the camera pointing to the
