--- a/results-regression.tex
+++ b/results-regression.tex
@@ -2,8 +2,8 @@
 \label{sec:results-regression}
 The objective of the regression task is to perform localization with performance comparable to GPS system. The parameters of the training had to be tuned for the network to perform at its best for the regression task.
 
-The layers of the network are initialized using normal distributions. The initialization variances had to be changed from 0.01 to 0.1 for Conv1 and to 0.05 for Conv2, Conv3, Conv4 and Conv5, so that the weights are big enough to propagate information through the network while still ensuring convergence.
-The initial learning rate and its evolution policy heavily depends on the loss which is used. For the regression task, very high values and a diverging behaviour were observed with the Euclidean loss at the beginning of the training. The initial learning rate had to be decreased to avoid these effects. The learning rate policy was set to the "step" policy from Caffe and it was chosen to decrease the learning rate by half every 25 000 iterations. In our case this corresponds to the number of iterations required to observe the stabilization of the loss after each exponential decrease.
+The layers of the network are initialized using normal distributions. The initialization variances had to be changed from 0.01 to 0.1 for {\tt conv1} and to 0.05 for {\tt conv2}, {\tt conv3}, {\tt conv4} and {\tt conv5}, so that the weights are big enough to propagate information through the network while still ensuring convergence.
+The initial learning rate and its evolution policy heavily depends on the loss which is used. For the regression task, very high values and a diverging behavior were observed with the Euclidean loss at the beginning of the training. The initial learning rate had to be decreased to avoid these effects. The learning rate policy was set to the "step" policy from Caffe and it was chosen to decrease the learning rate by half every 25 000 iterations. In our case this corresponds to the number of iterations required to observe the stabilization of the loss after each exponential decrease.
 
 In this context, we tested three different approaches.  The first one consists in training every layer with the same learning rate. The second one consists in fine-tuning the learning rate of each layer differently based on the results given by the first approach. The third one consists in loading the weights of the convolution layers from the classification training. In order to compare our results with those three approaches, we refer to the following loss function :
 
@@ -45,7 +45,7 @@ The last approach was used the same learning rate settings as the first approach
 \label{3appfilter}
 \end{figure}
 
-The best results regarding the loss values on the train and test datasets were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for images from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a and b). The red and green dots represent the original labels and the blue and purple dots represent the predicted labels. The error between X and Y coordinates of the predicted and original labels was also plotted on fig.~\ref{map}.c and was found to be centered on the origin without significant bias.
+The best results regarding the loss values on the train and test dataset were achieved with the second approach. After 148000 iterations, the prediction errors are centered Gaussian-like distributions with a standard deviation of 12.4 meters on X and 20.6 meters on Y. Considering that performing this operation with the human brain is found to be challenging for images from a natural environment, the resulting precision is very acceptable. The labels were displayed to be compared to the predicted positions (fig.~\ref{map}.a and b). The red and green dots represent the original labels and the blue and purple dots represent the predicted labels. The error between X and Y coordinates of the predicted and original labels was also plotted on fig.~\ref{map}.c and was found to be centered on the origin without significant bias.
 
 \begin{figure}[htb]
 \centering
