Final interation and small cosmetic changes

--- a/bmvc_dl_seasonal.tex
+++ b/bmvc_dl_seasonal.tex
@@ -4,7 +4,7 @@
 %% Enter your paper number here for the review copy
 \bmvcreviewcopy{202}
 
-\title{Convolutional Neural Network for the\\
+\title{Convolutional Neural Networks for the\\
 Representation of Natural Scenes with Large Seasonal Variations}
 
 % Enter the paper's authors in order
