--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,6 +1,6 @@
 \section{Conclusions}
-This paper evaluated the performance of convolutional neural network on place
-recognition and pose prediction tasks for natural environment under large
+This paper evaluated the performance of convolutional neural network on a place
+recognition task and a pose prediction task for natural environments under large
 seasonal changes, in the context of a long-term autonomous monitoring problem.
 To this end, we presented an original dataset consisting in several million
 images taken at weekly interval on the shore of a small lake over two years. 
