--- a/introduction.tex
+++ b/introduction.tex
@@ -31,8 +31,8 @@ images correspond to the same place albeit at different time of the year. For
 some image pairs, our test subjects took more than 30 seconds to confirm their answer.  
 
 One of the challenge of natural environment monitoring is to be able to compare
-the appearance of vastly varying outdoor settings with the purpose of at least
-detecting unnatural changes (intruders, structural damages, ...) and ideally to
+the appearance of vastly varying outdoor settings with the purpose of, at
+least, detecting unnatural changes (intruders, structural damages, ...) and, ideally, to
 classify changes according to their nature. 
 
 In this context, this paper focuses on the evaluation of deep convolutional
